# BroCOLI

./: CMakeLists.txt  README.md  build.sh
example/: example_SIRV.fasta  example_SIRV.gtf
src/: BroCOLI_bulk.cpp  BroCOLI_sc.cpp  preBroCOLI.cpp
